jf-list-maker: Fix broken 'remove' button on firefox (RTFACT-15158)

--- a/src/directives/jf_list_maker/jf_list_maker.less
+++ b/src/directives/jf_list_maker/jf_list_maker.less
@@ -60,6 +60,7 @@
       padding-right: 24px;
       position: absolute;
       right: 0;
+      top: -2px;
     }
   }
 
